Fixed flag cut off because it annoyed someone geg

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -1984,7 +1984,7 @@ row.wrap.sb .col {
 
 .flag {
 	width: 16px;
-	height: 10px;
+	height: 11px;
 }
 
 .customflag {
